# bevy_studies

./: .gitignore  Cargo.toml  README.md
assets/shaders/: custom_material.wgsl
examples/2d/: texture.rs  texture_from_bytes.rs  texture_from_bytes_with_time.rs
examples/3d/: 3d_mesh_with_2d_sprite.rs  3d_meshes.rs
examples/basic/: hello_world.rs
examples/egui/: egui_hello.rs  egui_value_change.rs
examples/gizmos/: gizmos_test.rs
examples/input/: keyboard_input.rs  mouse_tracking.rs  mouse_tracking_alt.rs  mouse_tracking_fast.rs  mouse_tracking_vsync_off.rs  numpad.rs
examples/layout/: upper_lower.rs
examples/material/: change_material_on_click.rs
examples/postprocess/: hello_postprocess.rs
examples/shader/: shader_test.rs
examples/text/: japanese_font.rs  justify.rs
examples/window/: fullscreen.rs  multi_fullscreen.rs  window_size_simple.rs
