[package]
name = "bevy_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }

[[example]]
name = "blank"
path = "examples/basic/blank.rs"

[[example]]
name = "hello_world"
path = "examples/basic/hello_world.rs"

[[example]]
name = "sprite_simple"
path = "examples/2d/sprite_simple.rs"

[[example]]
name = "texture"
path = "examples/2d/texture.rs"

[[example]]
name = "texture_from_bytes"
path = "examples/2d/texture_from_bytes.rs"

[[example]]
name = "3d_meshes"
path = "examples/3d/3d_meshes.rs"

[[example]]
name = "3d_mesh_with_2d_sprite"
path = "examples/3d/3d_mesh_with_2d_sprite.rs"

[[example]]
name = "window_size_simple"
path = "examples/window/window_size_simple.rs"

[[example]]
name = "japanese_font"
path = "examples/text/japanese_font.rs"

[[example]]
name = "upper_lower"
path = "examples/layout/upper_lower.rs"

[[example]]
name = "mouse_tracking"
path = "examples/input/mouse_tracking.rs"

[[example]]
name = "change_material_on_click"
path = "examples/material/change_material_on_click.rs"