[package]
name = "bevy_hello"
version = "0.1.0"
edition = "2021"

[features]
default = []
utf8 = ["utf8_slice"]
quick_response = ["bevy_quick_response"]

[dependencies]
bevy = { version = "0.13.2" }
bevy_egui = { version = "0.27.0" }
utf8_slice = { version = "1.0.0", optional = true }
bevy_quick_response = { version = "0.1.0", optional = true }

[[example]]
name = "blank"
path = "examples/basic/blank.rs"

[[example]]
name = "hello_world"
path = "examples/basic/hello_world.rs"

[[example]]
name = "sprite_simple"
path = "examples/2d/sprite_simple.rs"

[[example]]
name = "texture"
path = "examples/2d/texture.rs"

[[example]]
name = "texture_from_bytes"
path = "examples/2d/texture_from_bytes.rs"

[[example]]
name = "texture_from_bytes_with_time"
path = "examples/2d/texture_from_bytes_with_time.rs"

[[example]]
name = "3d_meshes"
path = "examples/3d/3d_meshes.rs"

[[example]]
name = "3d_mesh_with_2d_sprite"
path = "examples/3d/3d_mesh_with_2d_sprite.rs"

[[example]]
name = "window_size_simple"
path = "examples/window/window_size_simple.rs"

[[example]]
name = "fullscreen"
path = "examples/window/fullscreen.rs"

[[example]]
name = "multi_fullscreen"
path = "examples/window/multi_fullscreen.rs"

[[example]]
name = "japanese_font"
path = "examples/text/japanese_font.rs"

[[example]]
name = "justify"
path = "examples/text/justify.rs"
required-features = ["utf8"]

[[example]]
name = "upper_lower"
path = "examples/layout/upper_lower.rs"

[[example]]
name = "mouse_tracking"
path = "examples/input/mouse_tracking.rs"

[[example]]
name = "mouse_tracking_alt"
path = "examples/input/mouse_tracking_alt.rs"

[[example]]
name = "mouse_tracking_fast"
path = "examples/input/mouse_tracking_fast.rs"
required-features = ["quick_response"]

[[example]]
name = "mouse_tracking_vsync_off"
path = "examples/input/mouse_tracking_vsync_off.rs"

[[example]]
name = "keyboard_input"
path = "examples/input/keyboard_input.rs"

[[example]]
name = "numpad"
path = "examples/input/numpad.rs"

[[example]]
name = "change_material_on_click"
path = "examples/material/change_material_on_click.rs"

[[example]]
name = "egui_hello"
path = "examples/egui/egui_hello.rs"

[[example]]
name = "egui_value_change"
path = "examples/egui/egui_value_change.rs"

[[example]]
name = "gizmos_test"
path = "examples/gizmos/gizmos_test.rs"

[[example]]
name = "shader_test"
path = "examples/shader/shader_test.rs"